2009-04-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/dbtransaction.hxx:
  - Made constructor public again, thanks Maurice Gittens.
2009-04-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/prepared_statement.hxx, test/unit/test_prepared_statement.cxx:
  - Documented & tested binary parameters, thanks Michael Akinde.
2009-04-15  Eugene V. Lyubimkin <jackyf.devel@gmail.com>
 NEWS:
  - Typo fix.
2009-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/prepared_statement.hxx,
 include/pqxx/transaction_base.hxx, src/connection_base.cxx,
 src/prepared_statement.cxx, src/transasction_base.cxx,
 test/unit/test_prepared_statement.cxx:
  - Got varargs for prepared statements working.
  - Let you do conn.prepared("foo").exists(), thanks Maurice Gittens.
2009-01-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Use PQXXTR1, not PGSTD::tr1, thanks Eugene V. Lyubimkin
2009-01-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 libpqxx.spec.in:
  - Depend on postgresql-libs and postgresql-devel, thanks Bob Knock
  - Install x86_64 libs in /usr/lib64, thanks Bob Knock
  - Use %configure, not ./configure, thanks Bob Knock
  - Removed some hard-coding of directories, thanks Bob Knock
 win32/vc-test.mak.template:
  - Removed superfluous dot in library name.
  - Got rid of unnecessary quotes, thanks Andrew Maclean.
2009-01-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
  - Found better place to have $(INTDIR) created, thanks Andrew Maclean.
  - Factored 4-way "if" structure out into two 2-way ones.
2009-01-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/strconv.hxx:
  - Export throw_null_conversion, thanks Andrew Maclean
 win32/INSTALL.txt:
  - Tiny wording fix
2009-01-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 win32/vc-test.mak.template:
  - Link individual tests' object files into test runner
  - Consistently place all object files and executables in $(INTDIR)